--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,8 +4,9 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
-    ]
+      "jasmine",
+      "node"
+    ],
   },
   "files": [
     "src/test.ts",
